<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_white_bg"
    android:gravity="center"
    android:padding="25dp"
    tools:context="com.prepp.activity.LoginActivity">


    <ImageView
        android:id="@+id/img_boy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/boy_image" />

    <com.prepp.customviews.CustomTextView
        android:id="@+id/tv_create_ac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_boy"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/create_account"
        android:textColor="@color/sign_button_bg"
        android:textSize="@dimen/very_large_text"
        app:fontName="@string/roboto_bold" />

    <com.prepp.customviews.CustomTextView
        android:id="@+id/tv_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_create_ac"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/start_daily_quiz"
        android:textColor="@color/blue_black"
        android:textSize="@dimen/normal_text"
        app:fontName="@string/roboto_regular" />

    <com.prepp.customviews.CustomButton
        android:id="@+id/btn_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_msg"
        android:layout_marginTop="30dp"
        android:background="@color/sign_in_blue"
        android:drawableLeft="@drawable/fb_icon"
        android:drawablePadding="-40dp"
        android:gravity="center"
        android:paddingLeft="70dp"
        android:text="@string/login_facebook"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/large_text"
        app:fontName="@string/roboto_bold" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_below="@+id/btn_facebook"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content" />


    <!--<com.google.android.gms.common.SignInButton
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_facebook"
        android:layout_marginTop="30dp"
        android:background="#d34836"
        android:drawableLeft="@drawable/google_icon"
        android:drawablePadding="-40dp"
        android:gravity="center"
        android:paddingLeft="70dp"
        android:text="@string/login_google"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/large_text"
        app:fontName="@string/roboto_bold" />-->

    <com.prepp.customviews.CustomTextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_google"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="5dp"
        android:layout_above="@+id/btn_email"
        android:layout_marginBottom="10dp"
        android:text="OR"
        android:textColor="@color/blue_black"
        android:textSize="@dimen/large_text"
        app:fontName="@string/roboto_regular" />


    <com.prepp.customviews.CustomButton
        android:id="@+id/btn_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/sign_button_bg"
        android:gravity="center"
        android:text="@string/signup_email"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/large_text"
        app:fontName="@string/roboto_bold" />
</RelativeLayout>

