<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context="com.prepp.activity.IntroActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.8">

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_intro_item"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/img_progress_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center_horizontal" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rv_bottom_part"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:background="@drawable/white_bg">

        <com.prepp.customviews.CustomButton
            android:id="@+id/btn_lets_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_sign_in"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@color/sign_button_bg"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:paddingBottom="5dp"
            android:elevation="6dp"
            android:paddingTop="5dp"
            android:text="@string/next"
            android:textColor="@color/white"
            app:fontName="@string/roboto_bold" />

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/sign_in_text"
            android:textColor="@color/sign_in_blue"
            android:textSize="@dimen/normal_text" />

    </RelativeLayout>

</LinearLayout>
