<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nested_scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        xmlns:app="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lyt_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:fitsSystemWindows="true"
                card_view:cardCornerRadius="0dp"
                card_view:cardElevation="2dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/img_time"
                    android:fitsSystemWindows="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="50dp">


                    <ImageView
                        android:id="@+id/img_q_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/img_q_a" />

                    <com.prepp.customviews.CustomTextView
                        android:id="@+id/txt_wait_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:textColor="@color/blue_black"
                        android:textSize="@dimen/normal_text"
                        app:fontname="@string/roboto_regular" />

                    <LinearLayout
                        android:id="@+id/lyt_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        >

                    <com.prepp.customviews.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/till_then"
                        android:textColor="@color/blue_black"
                        android:textSize="@dimen/normal_text"
                        app:fontname="@string/roboto_regular" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <com.prepp.customviews.CustomTextView
                            android:id="@+id/txt_help_us"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginRight="5dp"
                            android:gravity="center"
                            android:text="@string/help_us"
                            android:textColor="@color/violet"
                            android:textSize="@dimen/normal_text"
                            app:fontname="@string/roboto_bold" />

                        <com.prepp.customviews.CustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"
                            android:text="@string/spred_word"
                            android:textColor="@color/blue_black"
                            android:textSize="@dimen/normal_text"
                            app:fontname="@string/roboto_regular" />
                    </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </FrameLayout>
</android.support.v4.widget.NestedScrollView>
