<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/violet"
        android:gravity="center_vertical"
        android:padding="14dp">

        <ImageView
            android:id="@+id/img_title"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_actionbar" />

        <com.prepp.customviews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/img_title"
            android:gravity="center_vertical"
            android:text="@string/today_quiz"
            android:textColor="@color/sign_button_bg"
            android:textSize="@dimen/large_text"
            app:fontName="@string/roboto_bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_user_menu" />

    </RelativeLayout>

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@+id/rv_title"
        android:background="@color/sign_button_bg" />

    <LinearLayout
        android:id="@+id/lyt_progress_circle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_divider"
        android:background="@color/white"
        android:elevation="6dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/img_progress_circle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/progress_1" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/lyt_next_wait"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lyt_progress_circle"
        android:background="@color/off_white">


        <com.prepp.customviews.CustomTextView
            android:id="@+id/txt_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawableLeft="@drawable/icn_success"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="Today's quiz is complete"
            android:textColor="@color/blue_black"
            android:textSize="@dimen/very_large_text"
            app:fontName="@string/roboto_bold" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txt_complete"
            android:src="@drawable/img_bg_result" />

        <com.prepp.customviews.CustomButton
            android:id="@+id/btn_view_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:background="@color/sign_button_bg"
            android:padding="18dp"
            android:text="@string/view_results"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text"
            app:fontName="@string/roboto_bold" />

    </RelativeLayout>


</RelativeLayout>
